typescript/checker/tests/conformance/Symbols/ES5SymbolProperty7.ts.stderr
error: NoSuchVar {
    span: Span {
        lo: BytePos(
            66,
        ),
        hi: BytePos(
            72,
        ),
        ctxt: #0,
    },
    name: Atom('Symbol' type=static),
}
 --> $DIR/tests/conformance/Symbols/ES5SymbolProperty7.ts:5:6
  |
5 |     [Symbol.iterator]() { }
  |      ^^^^^^

